# myKook

./: .gitignore  CMakeLists.txt  README.md  READMECN.md  build.bat  build_release.bat  conanfile.py  remark.txt
client/: .gitignore  CMakeLists.txt  conan_profile_win64_debug  conanfile.py
client/include/: SDLMic.h
client/src/: main.cpp
client/src/audio/: SDLSpeaker.cpp
client/src/net/: netTest.cpp
include/: SDLMic.h  SDLSpeaker.h
server/: CMakeLists.txt  build.bat  conan_profile_win64_release  conanfile.py
server/src/: main.cpp
src/: main.cpp
src/audio/: SDLAudio.cpp  SDLMic.cpp  SDLSpeaker.cpp
src/net/: netTest.cpp
